parse getters and setters to separate arrays

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "lodash": "^4.17.4",
     "tslib": "^1.7.1",
     "typescript": "^2.5.3"
+  },
+  "release": {
+    "branch": "cg-master"
   }
 }
