--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-parser",
-  "version": "0.0.0-development",
+  "version": "2.6.1-cg-fork",
   "description": "Parser for typescript (and javascript) files, that compiles those files and generates a human understandable AST.",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -49,9 +49,6 @@
     "lodash": "^4.17.10",
     "lodash-es": "^4.17.10",
     "tslib": "^1.9.3",
-    "typescript": "^3.0.3"
-    },
-  "release": {
-    "branch": "cg-master"
+    "typescript": "3.2.4"
   }
 }
