--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "devDependencies": {
     "@smartive/tslint-config": "^4.0.0",
     "@types/jest": "^23.3.1",
-    "@types/lodash-es": "^4.17.1",
+    "@types/lodash": "4.14.165",
+    "@types/lodash-es": "4.17.3",
     "@types/mock-fs": "^3.6.30",
     "@types/node": "^10.9.4",
+    "@types/minimatch": "3.0.3",
     "del-cli": "^1.1.0",
     "jest": "^23.5.0",
     "mock-fs": "^4.6.0",
@@ -49,6 +51,6 @@
     "lodash": "^4.17.10",
     "lodash-es": "^4.17.10",
     "tslib": "^1.9.3",
-    "typescript": "3.9.4"
+    "typescript": "3.2.4"
   }
 }
